# vortex

./: .gitignore  BRAND.md  Cargo.toml  FAQ.md  LICENSE.txt  README-FIRST.txt  README.md  README_gpu_priority.md  build.cmd  design-tokens.css
engine/src/: dash.rs  gpu_priority.rs  main.rs  protect.rs  sys.rs
installer/: vortex.nsi
