[package]
name = "vortex"
version = "0.1.0"
edition = "2021"
description = "Vortex — Symbiotic PC Optimizer for Windows 11"
authors = ["Zoe & Lévy"]

[[bin]]
name = "vortex"
path = "engine/src/main.rs"

[dependencies]
# windows-rs: tous les binding Win32/WinRT nécessaires exclusivement compilés sous Windows
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Registry",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31"
anyhow = "1.0"
chrono = "0.4"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
# rien d'extra pour l'instant

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
